fix h1 font size on mobile

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1175,6 +1175,19 @@ button {
   }
 }
 @media screen and (max-width: 570px) {
+  h1 {
+    font-size: 2.3rem !important;
+    line-height: 60px !important;
+  }
+
+  .section-header {
+    font-size: 1rem;
+  }
+  .section-header::after {
+    right: -95px;
+    width: 100px;
+  }
+
   .container {
     width: 90%;
   }
