--- a/src/sass/queries/queries.sass
+++ b/src/sass/queries/queries.sass
@@ -111,6 +111,17 @@
 
 
 @media screen and (max-width: 570px)
+    h1 
+        font-size: 2.3rem !important
+        line-height: 60px !important
+
+    .section-header
+        font-size: 1rem
+
+        &::after
+            right: -95px
+            width: 100px
+
     .container
         width: 90%
 
